--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,18 @@
-snapshotVersion=0.4.0
-mavenCentralUrl=https://maven-central.storage.googleapis.com
-ossrhUsername=
-ossrhPassword=
-pluginsRepo=https://plugins.jetbrains.com
+version=SNAPSHOT
+kotlinVersion=1.1.3-2
+ideaVersion=IC-2017.3.2
+downloadIdeaSources=true
+publishUsername=username
+publishPassword=password
+
+
+#######################################################################################################################
+# Uncomment one of the following settings: either pycharmPath or pythonPlugin
+#######################################################################################################################
+
+# Run MicroPython plugin inside PyCharm installed into the following path
+#pycharmPath=/path/to/pycharm
+
+# Run MicroPython plugin inside IntelliJ IDEA with the Python plugin. The IDE and the plugin will be downloaded
+# automatically
+pythonPlugin=PythonCore:2017.3.173.4127.35
